styles: fix menu spacing and make tag list scrollable

--- a/app/assets/stylesheets/_sn.scss
+++ b/app/assets/stylesheets/_sn.scss
@@ -45,6 +45,11 @@
   margin-bottom: 0.5rem;
 }
 
+.py-1\.5  {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}
+
 .outline-none {
   outline: none;
 }
@@ -94,16 +99,20 @@
   max-width: 265px;
 }
 
-.h-32px {
-  height: 32px;
-}
-
 .h-1px {
   height: 1px;
 }
 
 .h-10 {
   height: 2.5rem;
+}
+
+.max-h-80 {
+  max-height: 20rem;
+}
+
+.overflow-y-scroll {
+  overflow-y: scroll;
 }
 
 /**
